<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorDashboard">

    <TextView
        android:id="@+id/doctorInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/purple_350"
        android:padding="8pt"
        android:text="@string/doctor"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/viewDocAppoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="viewAppointment"
        android:text="@string/view_appointment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doctorInfo" />

    <Button
        android:id="@+id/viewPatientInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="viewPatients"
        android:text="@string/view_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDocAppoint" />

    <Button
        android:id="@+id/profile_doctor"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/icon_profile"
        android:onClick="changeProfile"
        tools:layout_editor_absoluteX="361dp"
        tools:layout_editor_absoluteY="9dp" />

</androidx.constraintlayout.widget.ConstraintLayout>